--- a/css/responsive.css
+++ b/css/responsive.css
@@ -154,6 +154,7 @@ section {
 .res-container {
   overflow: hidden;
   margin: 0 auto;
+  margin-bottom: 20px;
   width: 100%; }
 
 @media (min-width: 960px) {
@@ -166,5 +167,15 @@ section {
   .col-1-2 {
     float: left;
     width: 50%; } }
+
+@media (min-width: 960px) {
+  .col-1-3 {
+    float: left;
+    width: 33%; } }
+
+@media (min-width: 960px) {
+  .col-2-3 {
+    float: left;
+    width: 66%; } }
 
 /*# sourceMappingURL=responsive.css.map */
